--- a/css/page.css
+++ b/css/page.css
@@ -1,27 +1,45 @@
 /* CSS Document */
-	body, html
+	body, html, #body
 	{
-		font-family:Arial, sans-serif;
 		font-size:13px;
-		background-color:whiteSmoke;
 		margin:0px;
 		padding:0px;
 		border:0px;
 		height: 100%;
 	}
-
+	a:visited
+	{
+		color:#660066;
+	}
 	.page
 	{
-		padding:5px;
-		min-height: 90%; _height: 90%;
+		padding:8px;
+		min-height: 90%;
 	}
-		.header
+	.container
+	{
+		display:none;
+	}
+		header
 		{
 			margin-bottom:13px;
-			float:right;
+			background-color:#669933;
+			width:100%;
+		}
+		header img
+		{
+			padding:7px;
 		}
 			.menu
 			{
+				margin:0px;
+				padding:0px;
+				background-color:#CCCCCC;
+				padding:3px;
+			}
+			.menu ul
+			{
+				display:inline-table;
 				margin:0px;
 				padding:0px;
 			}
@@ -34,57 +52,57 @@
 			}
 			.menu li:before
 			{
-				content:"\2192 \0020"; 
+				content:" > "; 
 			}
-			
-		h1 /* page title */
-		{
-			font-weight:normal;
-			letter-spacing:3px;
-			margin-bottom:2px;
-			
-		}
-		h2 /* page description */
-		{
-			font-weight:lighter;
-			font-size:12px;
-			letter-spacing:1px;
-			margin-bottom:15px;
-		}
-		
-			form
-			{
-				margin:15px;
-				margin-top:0px;
-			}
-				h3 /* item title*/
-				{
-					font-weight:lighter;
-				}
-				h4 /* form title*/
-				{
-					font-weight:lighter;
-				}
-				h5 /* form input title*/
-				{
-					font-weight:lighter;
-					font-size:13px;
-					
-				}
 
-		.footer
+		footer
 		{
 			width:100%;
-			text-align:center;
-			margin:-25px 0 0;
-			padding-left:0;
-			padding-right:0;
 			padding-top:20px;
-			clear: both;
+			margin-top:-5px;
+			color:#FFFFFF;
+			height:20px;
+			clear:both;
+			display:block;
 		}
-			.debug
+			footer .status
 			{
-				display:block;
-				clear:both;
-				display:none;
+				background-color:#669933;
+				float:right;
+				height:15px;
+				margin-right:5px;
+				margin-top:-10px;
+				min-width:25%;
+				padding-left:5px;
+				
+				-moz-border-radius-topleft:6px;
+				border-top-left-radius: 5px
 			}
+			.footer-bar
+			{
+				background-color:#669933;
+				font-size:11px;
+				height:20px;
+				margin:5px;
+			}
+			.footer-bar a
+			{
+				color:Beige;			
+			}
+				.footer-bar-l
+				{
+					margin-top:3px;
+					margin-left:5px;
+					float:left;
+				}
+				.footer-bar-r
+				{
+					margin-top:3px;
+					margin-right:5px;
+					float:right;
+				}
+		.debug
+		{
+			clear:both;
+			display:none;
+		}
