--- a/css/page.css
+++ b/css/page.css
@@ -58,7 +58,7 @@
 			margin-top:-55px;
 			clear:both;
 			display:inline-block;
-			background-color:white !important;
+			background-color:white;
 		}
 		.status-bar
 		{
